# scenarioops_public

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  VERIFY.md  _WIP_full.diff  package.json  pyproject.toml  requirements.txt
app/: api.py  config.py  ui.html
config/: scenarioops.yaml
data/: public_sources_allowlist.json  source_reputation.json
demo/: demo_run.sh  demo_scope.json  demo_strategies.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DATA_CONTRACT.md  DEMO_SCRIPT.md  DEPLOY_CLOUD_RUN.md  PR_FEATURE_UI_VIS.md  RUNBOOK.md  ScenarioOps_Rapid_Safe-Change_Codex.md  UI_SPEC.md  artifacts.md  config.md
llm/: client.py
prompts/: annual_report_summary.prompt  beliefs.prompt  charter.txt  drivers.txt  effects.prompt  evidence_normalize.prompt  evidence_summary.prompt  ewis.txt  focal_issue.prompt  force_item_correction.prompt  forces.prompt  forces_chunk.prompt  forces_correction.prompt  logic.txt  narratives.txt  scan_pestel.prompt  scenario_story.prompt  scenario_synthesis.prompt  skeletons.txt  strategies.txt  strategy_item_correction.prompt  uncertainties.txt  washout_audit.prompt  wind_tunnel.txt
scenarioops/: __init__.py  __main__.py
schemas/: annual_report_summary.json  belief_sets.schema.json  charter.json  coverage_report.json  driver_entry.json  drivers_list.json  driving_forces.schema.json  epistemic_summary.json  evidence_units.schema.json  evidence_units_v2.schema.json  focal_issue.schema.json  forces_ranked.json  markdown.json  prompt_manifest.json  (+3 more)
(+286 files in other folders)
