[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenarioops"
version = "0.1.0"
description = "ScenarioOps core package."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ScenarioOps" }]
dependencies = [
  "fastapi>=0.110.0",
  "jsonschema>=4.21.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "reportlab>=4.1.0",
  "requests>=2.32.0",
  "streamlit>=1.33.0",
  "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "mypy>=1.8.0", "pytest>=7.4.0"]
ui = ["pyvis>=0.3.2"]

[project.scripts]
scenarioops = "scenarioops.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scenarioops*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
